MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Approval_Automations__mdt/Business_Process_Approval_Automations__mdt.object-meta.xml
<CustomObject>
    <label>Business Process Approval Automations</label>
    <pluralLabel>Business Process Approval Automations</pluralLabel>
</CustomObject>