MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Approval_Automations__mdt/fields/Automation_Calss_Name__c.field-meta.xml
<CustomField>
    <fullName>Automation_Calss_Name__c</fullName>
    <label>Automation Calss Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>